# auto_grad

./: .gitignore  Cargo.toml  README.md
benches/: bench_algos.rs
src/: graph.rs  lib.rs  ops.rs  pool.rs  vecops.rs
