[package]
name = "simple_grad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
hashbrown = "0.13"

[[bench]]
name = "bench_algos"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"
